                   User-Visible Term::ANSIColor Changes

Term::ANSIColor 4.07 (unreleased)

    Document bad interactions between colored output to standard output
    and standard error when standard output is line-buffered in a couple
    of places in the manual and suggest setting autoflush() or EACHLINE
    as a fix.  (#121974)

    Update to rra-c-util 8.0:

    * Update perlcritic configuration.
    * Add SPDX-License-Identifier headers to all significant files.

Term::ANSIColor 4.06 (2016-10-28)

    Add aliases ansi16 through ansi255 and on_ansi16 through on_ansi255
    (plus the corresponding constants) for the grey and rgb colors so that
    one can refer to all of the 256 ANSI colors with consistent names.
    These are aliases; the colors returned by uncolor will still use the
    grey and rgb names.  (#118267)

Term::ANSIColor 4.05 (2016-03-20)

    Color aliases are now restricted to ASCII alphanumerics, due to the
    below change.

    Delay loading of the Carp module and avoid using [:upper:], \w, and \d
    in regular expressions to reduce the amount of memory this module
    consumes.  (Normally, I wouldn't worry about this, but this module is
    very light-weight and can be useful even in highly space-constrained
    environments, and the impact is slight.)  Thanks, Nicolas R.
    (#111552)

    Provide a mailto address in bug tracking metadata, use the shorter
    form of the RT bug tracker URL, and fix the license value to match the
    new metadata specification.  Rework Makefile.PL so that the munging
    for older versions of ExtUtils::MakeMaker is less intrusive.

Term::ANSIColor 4.04 (2015-12-06)

    Revert the build system back to ExtUtils::MakeMaker.  This is the
    build system actually used in Perl core, so this removes a level of
    indirectly generated files and means that normal module development
    tests the same build system used by Perl.  Update Makefile.PL with the