@@ -7,6 +7,11 @@ Term::ANSIColor 4.07 (unreleased)
     of places in the manual and suggest setting autoflush() or EACHLINE
     as a fix.  (#121974)
 
+    Document how to support CLICOLOR <https://bixense.com/clicolors/> in
+    programs using Term::ANSIColor.  (Due to backward compatibility and
+    non-output uses, there's no easy way to support CLICOLOR in the module
+    automatically.)
+
     Update to rra-c-util 8.0:
 
     * Update perlcritic configuration.
